[fix] main-nav alignmet

--- a/source/sass/blocks/_header.scss
+++ b/source/sass/blocks/_header.scss
@@ -21,7 +21,8 @@
   @media (min-width: $tablet-width) {
     display: grid;
     grid-template-columns: 1fr 2fr;
-    grid-template-rows: 112px 815px;
+    grid-template-rows: max-content 815px;
+    grid-gap: 20px;
     margin-bottom: 25px;
   }
 
@@ -40,7 +41,7 @@
   @media (min-width: $tablet-width) {
   display: block;
   margin-top: 24px;
-  margin-left: 8px;
+  margin-inline: 8px;
   }
 
   @media (min-width: $desktop-width) {
@@ -141,12 +142,15 @@
 
 .main-nav {
   @media (min-width: $tablet-width) {
-    width: max-content;
+    grid-column: 2 / -1;
+    width: auto;
+    height: auto;
     margin-left: auto;
   }
   @media (min-width: $desktop-width) {
     margin-top: 27px;
     margin-right: 95px;
+    padding-inline: 20px;
   }
 }
 
